--- a/public/index.ejs
+++ b/public/index.ejs
@@ -19,7 +19,7 @@
         <div class="row">
             <div class="col-md-7 p-5">
                 <h2> Yet Another URL shortner 👋 YAURLS </h2> <br>
-                <form method="POST" action="http://localhost:5000/url" class="form-controller">  
+                <form method="POST" action="/url" class="form-controller">  
                     <h6>Yet another URL shortener  made by 🖤  </h6>
                      <input type="text" name="slug" placeholder="Input long url here" class="form-control">
                      <button type="submit"> Short It</button>
