ui updated  with info

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -19,12 +19,19 @@
         <div class="row">
             <div class="col-md-7 p-5">
                 <h2> Yet Another URL shortner 👋 YAURLS </h2> <br>
-                <form method="POST" action="/url" class="form-controller">  
+                <!-- <form method="POST" action="/url" class="form-controller">  
                     <h6>Yet another URL shortener  made by 🖤  </h6>
                      <input type="text" name="slug" placeholder="Input long url here" class="form-control">
                      <button type="submit"> Short It</button>
-                </form>
+                </form> -->
+                <h6>UI coming soon</h6>
+                <br><br>
+                <h6>Endpoints</h6>
+                <ul>
+                    <li>/create-url - post method⚡  </li>
+                    <li>/{slug} - get method  💆  redirect to original link </li>
  
+                </ul>
 
             </div>
             <div class="col-md-5">
